--- a/index.css
+++ b/index.css
@@ -10,6 +10,10 @@
     margin-top: 50px;
 }
 
+.mt-20 {
+    margin-top: 20px;
+}
+
 .carousel-height {
     height: 450px;
 }
@@ -17,3 +21,8 @@
 .cursor-pointer {
     cursor: pointer;
 }
+
+.card-style {
+    height: 250px;
+}
+
